--- a/Web/web2/dockerfile
+++ b/Web/web2/dockerfile
@@ -4,4 +4,5 @@ COPY src /var/www/html
 
 RUN mv /var/www/html/flag.sh / \
     && chmod +x /flag.sh \
-    && chown -R www-data:www-data /var/www/html
+    && chown -R www-data:www-data /var/www/html \
+    && mv /var/www/html/flag /
